@@ -1,6 +1,7 @@
 package org.minborg.jfocus2023;
 
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SegmentScope;
 import java.nio.channels.FileChannel;
@@ -20,7 +21,7 @@ public class Demo2_Memory_Mapped_MemorySegment {
 
             // Create a 64 TiB mapped memory segment managed by the GC (SegmentScope.auto())
             // The file can be shared across threads and/or processes
-            MemorySegment mapped = fc.map(READ_WRITE, 0, 1L << 46, SegmentScope.auto());
+            MemorySegment mapped = fc.map(READ_WRITE, 0, 1L << 46, Arena.ofAuto());
 
             System.out.println(mapped);
         }
